--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,81 @@ h6 {
   margin-top: 16px;
 }
 
+.about {
+  position: relative;
+  z-index: 2;
+  margin-top: -220px;
+}
+
+.about::before {
+  content: "";
+  width: 100%;
+  height: 128px;
+  background: url("../images/about/wave.svg");
+  background-size: 100% 100%;
+  position: relative;
+  display: block;
+  top: 1px;
+}
+
+.about__content {
+  background: #1C3873;
+  padding-bottom: 112px;
+  color: #FFFFFF;
+  position: relative;
+  z-index: 3;
+}
+
+.about__logo {
+  margin-top: 5px;
+}
+
+.about__description {
+  margin-top: 50px;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.about__benefits {
+  margin-top: 40px;
+  margin-bottom: -40px;
+}
+
+.about__benefit {
+  display: flex;
+  align-items: start;
+  margin-bottom: 40px;
+}
+
+.about__benefit-icon {
+  width: 75px;
+  flex-shrink: 0;
+  margin-right: 30px;
+}
+
+.about__benefit-text {
+  margin-top: 15px;
+  font-size: 15px;
+  line-height: 22px;
+  opacity: 0.6;
+  padding-right: 20px;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .about::before {
+    height: 110px;
+  }
+
+  .about__content {
+    padding-bottom: 88px;
+  }
+
+  .about__description {
+    margin-top: 35px;
+    font-size: 18px;
+  }
+}
+
 @media screen and (max-width: 991.98px) {
   .title {
     font-size: 26px;
@@ -401,6 +476,32 @@ h6 {
     padding-right: 0;
     margin-top: 0;
   }
+
+  .about {
+    margin-top: -150px;
+  }
+
+  .about::before {
+    height: 89px;
+  }
+
+  .about__content {
+    padding-bottom: 44px;
+  }
+
+  .about__logo {
+    margin-top: 10px;
+    width: 150px;
+  }
+
+  .about__description {
+    margin-top: 24px;
+    font-size: 16px;
+  }
+
+  .about__benefit-text {
+    padding-right: 10px;
+  }
 }
 
 @media screen and (max-width: 767.98px) {
@@ -484,6 +585,36 @@ h6 {
     border-radius: 17px;
     margin-right: 20px;
   }
+
+  .about {
+    margin-top: 8px;
+  }
+
+  .about::before {
+    background: url("../images/about/wave-mobile.svg");
+    background-size: 100% 100%;
+    height: 80px;
+  }
+
+  .about__logo {
+    width: 120px;
+    margin-top: -30px;
+  }
+
+  .about__benefits {
+    margin-top: 36px;
+    margin-bottom: -35px;
+  }
+
+  .about__benefit {
+    flex-direction: column;
+    margin-bottom: 35px;
+  }
+
+  .about__benefit-icon {
+    width: 60px;
+    margin-right: 0;
+  }
 }
 
 @media screen and (max-width: 575.98px) {
@@ -502,5 +633,9 @@ h6 {
   .advantage__image {
     margin-right: 0;
     margin-bottom: 15px;
+  }
+
+  .about::before {
+    height: 60px;
   }
 }
