--- a/css/style.css
+++ b/css/style.css
@@ -380,20 +380,26 @@ h6 {
 
 .logistics {
   margin-top: 117px;
+  padding-bottom: 240px;
+  background: url("../images/logistics/bg.svg") bottom center no-repeat;
+  background-size: 100% 650px;
 }
 
 .logistics__benefits {
   margin-top: 74px;
+  margin-bottom: -30px;
 }
 
 .logistics__benefit {
   display: flex;
   align-items: start;
+  margin-bottom: 30px;
 }
 
 .logistics__benefit-icon {
   width: 90px;
   height: 80px;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -604,6 +610,32 @@ h6 {
   .about__benefit-text {
     padding-right: 10px;
   }
+
+  .logistics {
+    margin-top: 83px;
+    padding-bottom: 200px;
+    background-size: 100% 510px;
+  }
+
+  .logistics__benefits {
+    margin-top: 40px;
+  }
+
+  .logistics__slider {
+    margin-top: 60px;
+  }
+
+  .logistics__equipment {
+    height: 206px;
+    margin-right: 30px;
+    width: calc(33.333% - 20px);
+    border-radius: 19px;
+  }
+
+  .logistics__equipment-name {
+    height: 47px;
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 767.98px) {
@@ -614,6 +646,25 @@ h6 {
 
   .title::before {
     display: none;
+  }
+
+  .flickity-enabled {
+    padding-top: 0;
+    padding-bottom: 65px;
+  }
+
+  .flickity-enabled .flickity-prev-next-button {
+    top: unset;
+    bottom: 0;
+  }
+
+  .flickity-enabled .flickity-prev-next-button.previous {
+    left: calc(50% - 50px);
+  }
+
+  .flickity-enabled .flickity-prev-next-button.next {
+    left: unset;
+    right: calc(50% - 50px);
   }
 
   .small-header {
@@ -717,6 +768,27 @@ h6 {
     width: 60px;
     margin-right: 0;
   }
+
+  .logistics {
+    background: none;
+    padding-bottom: 0;
+  }
+
+  .logistics {
+    margin-top: 65px;
+  }
+
+  .logistics__benefits {
+    margin-top: 35px;
+  }
+
+  .logistics__slider {
+    margin-top: 45px;
+  }
+
+  .logistics__equipment {
+    width: calc(50% - 15px);
+  }
 }
 
 @media screen and (max-width: 575.98px) {
@@ -739,5 +811,11 @@ h6 {
 
   .about::before {
     height: 60px;
+  }
+
+  .logistics__equipment {
+    width: 290px;
+    height: 272px;
+    margin-right: 15px;
   }
 }
