--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -114,6 +114,11 @@ h6 {
 
   padding-top: 70px;
 
+  @include tablet {
+    padding-top: 0;
+    padding-bottom: 65px;
+  }
+
   .flickity-prev-next-button {
 
     position: absolute;
@@ -127,13 +132,31 @@ h6 {
     justify-content: center;
     padding: 0;
 
+    @include tablet {
+      top: unset;
+      bottom: 0;
+    }
+
     &.previous {
+
       left: 0;
+
+      @include tablet {
+        left: calc(50% - 50px);
+      }
+
     }
 
     &.next {
+
       left: 55px;
       right: unset;
+
+      @include tablet {
+        left: unset;
+        right: calc(50% - 50px);
+      }
+
     }
 
     .flickity-button-icon {
