--- a/src/scss/_logistics.scss
+++ b/src/scss/_logistics.scss
@@ -1,19 +1,50 @@
 .logistics {
 
   margin-top: 117px;
+  padding-bottom: 240px;
+  background: url("../images/logistics/bg.svg") bottom center no-repeat;
+  background-size: 100% 650px;
+
+  @include laptop {
+    margin-top: 83px;
+    padding-bottom: 200px;
+    background-size: 100% 510px;
+  }
+
+  @include tablet {
+    background: none;
+    padding-bottom: 0;
+  }
+
+  @include tablet {
+    margin-top: 65px;
+  }
 
   &__benefits {
+
     margin-top: 74px;
+    margin-bottom: -30px;
+
+    @include laptop {
+      margin-top: 40px;
+    }
+
+    @include tablet {
+      margin-top: 35px;
+    }
+
   }
 
   &__benefit {
 
     display: flex;
     align-items: start;
+    margin-bottom: 30px;
 
     &-icon {
       width: 90px;
       height: 80px;
+      flex-shrink: 0;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -35,7 +66,17 @@
   }
 
   &__slider {
+
     margin-top: 70px;
+
+    @include laptop {
+      margin-top: 60px;
+    }
+
+    @include tablet {
+      margin-top: 45px;
+    }
+
   }
 
   &__equipment {
@@ -48,7 +89,25 @@
     overflow: hidden;
     margin-right: 48px;
 
+    @include laptop {
+      height: 206px;
+      margin-right: 30px;
+      width: calc(33.333% - 20px);
+      border-radius: 19px;
+    }
+
+    @include tablet {
+      width: calc(50% - 15px);
+    }
+
+    @include phone {
+      width: 290px;
+      height: 272px;
+      margin-right: 15px;
+    }
+
     &-name {
+
       background: rgba(188,215,255,.78);
       height: 74px;
       position: absolute;
@@ -63,6 +122,12 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+
+      @include laptop {
+        height: 47px;
+        font-size: 14px;
+      }
+
     }
 
   }
