--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,7 @@
 $blue: #1C3873;
 $link-blue: #164FCE;
 $green: #B5DA22;
-$light-blue: #BCD7FF;
+$light-blue: #bcd7ff;
 $white: #FFFFFF;
 
 @mixin desktop {
