--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -16,6 +16,13 @@ body {
   text-align: left;
 }
 
+.site-container {
+  max-width: 1920px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 a, a:hover {
   text-decoration: unset;
   color: unset;
@@ -94,6 +101,49 @@ h6 {
 
 }
 
+.button {
+
+  background: $green;
+  color: $blue;
+  height: 45px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: max-content;
+  padding: 0 35px;
+  font-size: 15px;
+  line-height: 18px;
+  border: none;
+
+  &:focus, &:active {
+    outline: none;
+  }
+
+  &:hover {
+    background: #74CC1C;
+    cursor: pointer;
+  }
+
+  &:active {
+    transform: scale(.95);
+  }
+
+  &_disabled {
+
+    opacity: .3;
+    cursor: not-allowed !important;
+    background: $green !important;
+
+    &:active {
+      transform: none;
+    }
+
+  }
+
+}
+
 .fade:not(.show) {
   opacity: 0;
 }
@@ -108,6 +158,17 @@ h6 {
 
 .tab-content>.active {
   display: block;
+}
+
+.fancybox-close-small {
+
+  padding: 0 !important;
+  width: 30px;
+  height: 30px;
+  margin-top: 12px;
+  margin-right: 12px;
+  color: $blue !important;
+
 }
 
 .flickity-enabled {
