--- a/src/scss/_questions.scss
+++ b/src/scss/_questions.scss
@@ -1,34 +1,127 @@
 .questions {
 
-  height: 564px;
+  height: 588px;
   margin-top: -174px;
   background: url("../images/questions/bg.png") top center;
-  background-size: cover;
+  background-size: auto 100%;
+
+  @include laptop {
+    height: 544px;
+    margin-top: -108px;
+    background: url("../images/questions/bg-tablet.png") top center;
+    background-size: auto 100%;
+  }
+
+  @include tablet {
+    height: 450px;
+    margin-top: 0;
+    background-position: top left;
+  }
+
+  @include phone {
+    height: auto;
+    background: url("../images/questions/bg-mobile.png") top center;
+    background-size: cover;
+    padding-bottom: 36px;
+  }
 
   &__headers {
-    margin-top: 217px;
+
+    margin-top: 240px;
     color: $white;
     padding-right: 20px;
+    padding-left: 80px;
+
+    @include desktop-xl {
+      padding-left: 0;
+    }
+
+    @include laptop {
+      margin-top: 135px;
+    }
+
+    @include tablet {
+      margin-top: 145px;
+      padding-left: 15px;
+    }
+
+    @include phone {
+      margin-top: 52px;
+    }
+
   }
 
   &__subtitle {
+
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
+
+    @include laptop {
+      font-size: 14px;
+      line-height: 14px;
+    }
+
+    @include tablet {
+      font-size: 16px;
+      line-height: 22px;
+    }
+
+    @include phone {
+      font-size: 16px;
+      line-height: 22px;
+    }
+
   }
 
   &__title {
+
     font-weight: bold;
     font-size: 30px;
     line-height: 35px;
     margin-top: 30px;
+
+    @include laptop {
+      margin-top: 28px;
+      font-size: 20px;
+      line-height: 28px;
+    }
+
+    @include tablet {
+      margin-top: 20px;
+      font-size: 18px;
+      line-height: 24px;
+    }
+
+    @include phone {
+      font-size: 24px;
+      line-height: 28px;
+    }
+
   }
 
   &__form {
-    margin-top: 124px;
+
+    margin-top: 147px;
     max-width: 360px;
     margin-left: auto;
     margin-right: auto;
+
+    @include laptop {
+      margin-top: 52px;
+      margin-right: unset;
+    }
+
+    @include tablet {
+      margin-top: 70px;
+    }
+
+    @include phone {
+      margin-top: 30px;
+      max-width: 290px;
+      margin-right: auto;
+    }
+
   }
 
 }
