--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
 @import "vars";
 @import "common";
 
+@import "header";
+@import "hero";
 @import "small-header";
 @import "use";
 @import "categories";
@@ -8,7 +10,5 @@
 @import "logistics";
 @import "questions";
 @import "form";
-
 @import "modal";
-
 @import "footer";
