--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -10,6 +10,18 @@
     height: 598px;
   }
 
+  @include tablet {
+    height: 500px;
+  }
+
+  @include phone {
+    background: url("../images/hero/bg-phone.png") bottom center no-repeat;
+    background-size: 100% auto;
+    height: auto;
+    padding-bottom: 100px;
+    margin-bottom: 0;
+  }
+
   &__header {
 
     margin-top: 37px;
